# Personal-Agent

./: .gitignore  agent.py  main.py  mcp_tools.py  pyproject.toml
agent_service/: agent_models.py  config.py  router.py  service.py
agent_service/skills/: job_application_automation_skill.md  user_info_retrieval_skill.md
agent_service/tools/: load_skill.py
database_service/: config.py  conversation_service.py  interest_service.py  jobs_search_service.py  models.py  preference_service.py  service.py  user_service.py
database_service/tools/: database_tool.py
local_tools/: database_tools.py
