[project]
name = "mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.137.0",
    "langchain>=1.3.9",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.2",
]
