[project]
name = "mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.137.0",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.2",
    "pytesseract>=0.3.13",
    "unstructured-inference>=1.6.13",
    "unstructured[csv,image,pdf]>=0.23.1",
]
